--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -6,11 +6,11 @@
       <div class="header-right">
         <ul class="nav">
           <% if user_signed_in? %>
-            <li><%= link_to "こんにちは、#{current_user.nickname}さん", "#", class: "hello" %></li>
-            <li><%= link_to 'ユーザーログアウト', destroy_user_session_path, method: :delete, class: "sign-out" %></li>
+            <li><%= link_to "こんにちは、#{current_user.nickname}さん", user_path(current_user.id), class: "hello" %></li>
+            <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "sign-out" %></li>
           <% elsif company_signed_in? %>
-            <li><%= link_to "こんにちは、#{current_company.company_name}様", "#", class: "hello" %></li>
-            <li><%= link_to '法人ログアウト', destroy_company_session_path, method: :delete, class: "sign-out" %></li>
+            <li><%= link_to "こんにちは、#{current_company.company_name}様", company_path(current_company.id), class: "hello" %></li>
+            <li><%= link_to 'ログアウト', destroy_company_session_path, method: :delete, class: "sign-out" %></li>
           <% else %>
             <li><%= link_to 'ユーザーログイン', new_user_session_path, class: "sign-in" %></li>
             <li><%= link_to '法人の方ログイン', new_company_session_path, class: "sign-up" %></li>
@@ -24,21 +24,39 @@
 <div style="background-image:url(/images/Live.png)" class="contents-wrapper">
     <div class="context">
       <% if user_signed_in? %>
-        <h2>企業一覧</h2>
-        <% @companies.each do |company| %>
-          <%= company.company_name %>
-        <% end %>
+        <div class="index-container">
+          <h2 class="index-title">企業一覧</h2>
+          <div class="index-contents">
+            <% @companies.each do |company| %>
+              <div class="index-content">
+                <%= link_to image_tag(company.image, class: 'image'), company_path(company.id) if company.image.attached? %>
+                <%= link_to company.company_name, company_path(company.id), class: "user-info" %>
+                <div class="follow-link">
+                  <%= link_to 'フォローする', "#", class: "follow" %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
       <% elsif company_signed_in? %>
-        <h2>ユーザー一覧</h2>
-        <% @users.each do |user| %>
-          <%= user.nickname %>
-        <% end %>
+        <div class="index-container">
+          <h2 class="index-title">ユーザー一覧</h2>
+          <div class="index-contents">
+            <% @users.each do |user| %>
+              <div class="index-content">
+                <%= link_to image_tag(user.image, class: 'image'), user_path(user.id) if user.image.attached? %>
+                <%= link_to user.nickname, user_path(user.id), class: "user-info" %>
+                <div class="follow-link">
+                  <%= link_to 'フォローする', "#", class: "follow" %>
+                </div>
+              </div>
+            <% end %>
       <% else %>
         <div class="catch-copy">あなたの夢は、ここから始まる。</div>
         <p class="detail">歌うことが好き。将来は歌声をたくさんの人に届けたいけど、<br>仕事にするのはちょっぴり不安。そんな悩みを抱えていませんか。<br><br>毎回のオーデションにかかるコストを削減しつつ、<br>将来性のある人材が欲しい。そんな課題を抱えていませんか。<br><br>このアプリはユーザー様、法人様双方の課題を<br>BtoCによるマッチングシステムで解決し、<br>エンターテイメント業界のさらなる発展に貢献いたします。</p>
       <% end%>
     </div>
-    <div class="footer">
-      <div class="my-name">presented by Sho.</div>
-    </div>
+</div>
+<div class="footer">
+  <div class="my-name">presented by Sho.</div>
 </div>
