--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -448,3 +448,128 @@ header {
   color: white;
 }
 
+/* 詳細ページ ============================ */
+
+.detail-contents {
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.detail-contents::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.2);
+  height: 100%;
+}
+
+.detail-container {
+  width: 100%;
+  height: 75%;
+  padding-top: 110px;
+  position: absolute;
+}
+
+.information-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 30px;
+  position: absolute;
+  height: 100%;
+}
+
+.profile-contents {
+  min-height: calc(100vh - 161vh);
+  height: 90%;
+  width: 70%;
+  margin: 0 80px;
+  background-color: rgba(238,238,238,0.4);
+  z-index: 10;
+  overflow: auto;
+}
+
+.pro-image {
+  margin-top: 10px;
+  height: 200px;
+}
+
+.img {
+  width: 40%;
+  height: 90%;
+}
+
+.info-list {
+  list-style-type: square;
+  font-size: 26px;
+  text-align: left;
+  margin: 30px 30px 18px 30px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.profile-detail {
+  font-size: 26px;
+}
+
+
+.cp_h1title {
+	position: relative;
+	padding: .1em .3em .1em .5em;
+  border-left: 6px solid #c0c0c0;
+  font-size: 30px;
+  width: 40%;
+  margin: 0 auto;
+  color: coral;
+}
+.cp_h1title::before {
+	position: absolute;
+	content: '';
+	left: -6px;
+	bottom: 0;
+	width: 6px;
+	height: 50%;
+	background-color: coral;
+}
+.cp_h1title::after {
+	position: absolute;
+	content: '';
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 0;
+	border-bottom: 1px solid #c0c0c0;
+}
+
+.profile-text {
+  text-align: left;
+  margin: 10px auto;
+  padding: 2px;
+  width: 83%;
+  height: 120px;
+  border: 1px solid black;
+}
+
+.office-url {
+  text-decoration: none;
+  color: black;
+}
+
+.match {
+  font-size: 35px;
+  color: red;
+}
+
+.arrow {
+  font-size: 20px;
+  color: red;
+}
