--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,84 @@
-<%= @user.nickname %>
+<header>
+  <div class="top-wrapper">
+    <div class="header-left">
+      <%= link_to 'Be ambitious', root_path, class: "header-logo" %>
+    </div>
+    <div class="header-right">
+      <ul class="nav">
+        <% if user_signed_in? && current_user.id == @user.id %>
+          <li><%= link_to "こんにちは、#{current_user.nickname}さん", user_path(current_user.id), class: "hello" %></li>
+          <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "sign-out" %></li>
+        <% elsif company_signed_in? %>
+          <li><%= link_to "こんにちは、#{current_company.company_name}様", company_path(current_company.id), class: "hello" %></li>
+          <li><%= link_to 'ログアウト', destroy_company_session_path, method: :delete, class: "sign-out" %></li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</header>
+<div style="background-image:url(/images/guitar.png)" class="detail-contents">
+  <div class="context">
+    <% if user_signed_in? && current_user.id == @user.id %>
+      <div class="detail-container">
+        <h1 class="cp_h1title"><%= "#{current_user.nickname}さんのページ" %></h1>
+        <div class="information-wrapper">
+          <div class="profile-contents">
+            <div class="pro-image">
+              <p class="profile-detail">プロフィール画像</p>
+              <%= image_tag current_user.image, class: 'img' if current_user.image.attached? %>
+            </div>
+            <ul class="info-list">
+              <li><%= "Nickname: #{current_user.nickname}" %></li>
+              <li><%= "E-mail: #{current_user.email}" %></li>
+            </ul>
+            <p class="profile-detail">Profile</p>
+            <div class="profile-text">
+              <%= current_user.detail %>
+            </div>
+            <%= link_to "編集する", edit_user_registration_path, class: "edit-profile" %>
+          </div>
+        </div>
+      <div>
+    <% elsif company_signed_in? %>
+      <div class="detail-container">
+        <h1 class="cp_h1title"><%= "#{@user.nickname}さんのプロフィール" %></h1>
+        <div class="information-wrapper">
+          <div class="profile-contents">
+            <div class="pro-image">
+              <p class="profile-detail">プロフィール画像</p>
+              <%= image_tag @user.image, class: 'img' if @user.image.attached? %>
+            </div>
+            <ul class="info-list">
+              <li><%= "Nickname: #{@user.nickname}" %></li>
+              <li><%= "E-mail: #{@user.email}" %></li>
+            </ul>
+            <p class="profile-detail">Profile</p>
+            <div class="profile-text">
+              <%= @user.detail %>
+            </div>
+
+            <% if @company_relations.present? %>
+              <%= link_to 'フォローを外す', user_company_relation_path(@user.id), method: :delete, remote: true, class:'relation-destroy', id: "unfollow" %>
+              <% if @user_relations.present? %>
+                <div class="match">マッチングしました！</div>
+                <div class="arrow">↓↓↓↓↓↓↓↓</div>
+              <% end %>
+            <% else %>
+              <%#= link_to 'フォローする', user_company_relations_path(@user.id), method: :post, remote: true, class:'relation' %>
+              <%= form_with model: @company_relation, url: user_company_relations_path(@user.id), id: "form", local: true do |f| %>
+                <%= f.hidden_field :user_id, :value => @user.id %>
+                <%= f.hidden_field :company_id, :value => current_company.id %>
+                <%= f.submit "フォローする", id: "btn" %>
+              <% end %>
+            <% end %>
+
+            
+          </div>
+        </div>
+      <div>
+    <% end %>
+  </div>
+</div>
+<div class="footer">
+  <div class="my-name">presented by Sho.</div>
+</div>
